# GeneticAlgorithm_Parallel

./: CMakeLists.txt  README.md  knapsack.txt  knapsack_hard.txt  knapsack_medium.txt
include/: Exception.h  Indiv.h  Island.h
src/: Exception.cpp  Indiv.cpp  Island.cpp  main.cpp
